--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,4 @@
-db.url=jdbc:mysql://localhost:3306/project_manager?useSSL=false&allowPublicKeyRetrieval=true
+db.url=jdbc:mysql://
 db.user=root
-db.password=Nightwing1995!
+
+db.password=
